--- a/exercicio_html_js.html
+++ b/exercicio_html_js.html
@@ -1,20 +1,27 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Campos Numéricos</title>
+    <link rel="stylesheet" href="main.css">
+</head>
 <body>
-    <nav>
-        <div class="container">
-            <h1>Integrando HTML com JavaScript</h1>
-            <h2>Validação no JavaScript</h2>
-            <form id="form-confirm">
-                <label for="A"><b>Valor_A</b></label>
-                <input type="number" id="valor-a" required placeholder="Digite o valor A" />
-                <label for="B"><b>Valor_B</b></label>
-                <input type="number" id="valor-b" required placeholder="Digite o valor B" />
-                <p class="error-message">
-                    O valor B precisa ser maior que o valor A!
-                </p>
-                <button type="submit">Validar</button>
-            </form>
-            <p class="success-message"></p>
-        </div>
-    </nav> 
-        <script src="./main.js"></script>
-    </body>
+    <div class="container">
+        <h1>Módulo 07 EBAC - Exercício</h1>
+        <form id="areas">
+            <input type="number" name="campo-A" id="A" required placeholder="campo-A">
+            <input type="number" name="campo-B" id="B" required placeholder="campo-B">
+            <button type="submit">Enviar</button>
+        </form>
+        <p class="message-sucess">
+            
+        </p>
+        <p class="message-error">
+            
+        </p>
+    </div>
+    <script src="java.js"></script>
+</body>
+</html>
